added links to repository

--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
 </head>
 
 <body>
-    <h1> hey!</h1>
+    <h1> WORLD CLOCK</h1>
     <footer>
-        This project was coded by<a href="" target="_blank">Whitney Lee</a> and is opened sourced on <a href=""
-            target="_blank">Github</a>
+        This project was coded by<a href="https://github.com/whitl33/world-clock-project" target="_blank">Whitney
+            Lee</a> is opened sourced on <a href="https://github.com/whitl33" target="_blank">Github </a> and hosted on
+        <a href="https://world-clock-project-ok.netlify.app" target="_blank"> Netlify</a>
     </footer>
     <script src="javascript/index.js"></script>
 </body>
