added in basic html

--- a/index.html
+++ b/index.html
@@ -10,12 +10,35 @@
 
 <body>
     <h1> WORLD CLOCK</h1>
+    <div class="container">
+        <select>
+            <option value=""> Select a City...</option>
+            <option value=""> Montreal</option>
+            <option value=""> New Delhi</option>
+            <option value=""> Portland</option>
+        </select>
+
+        <div class="city">
+            <h2> Sydney 🇦🇺 </h2>
+            <div class="date"> May 5th, 2025</div>
+            <div class="time"> 2:45:10 pm</div>
+        </div>
+        <h2>Bristol 🏴󠁧󠁢󠁥󠁮󠁧󠁿</h2>
+        <div class="date"> May 5th, 2025</div>
+        <div class="time"> 2:45:10 pm</div>
+    </div>
+
+
     <footer>
         This project was coded by<a href="https://github.com/whitl33/world-clock-project" target="_blank">Whitney
-            Lee</a> is opened sourced on <a href="https://github.com/whitl33" target="_blank">Github </a> and hosted on
+            Lee</a> is opened sourced on <a href="https://github.com/whitl33" target="_blank">Github </a> and hosted
+        on
         <a href="https://world-clock-project-ok.netlify.app" target="_blank"> Netlify</a>
     </footer>
     <script src="javascript/index.js"></script>
 </body>
+
+
+
 
 </html>
