--- a/index.html
+++ b/index.html
@@ -19,19 +19,29 @@
         </select>
 
         <div class="city">
-            <h2> Sydney 🇦🇺 </h2>
-            <div class="date"> May 5th, 2025</div>
-            <div class="time"> 2:45:10 pm</div>
+            <div>
+                <h2> Sydney 🇦🇺 </h2>
+                <div class="date"> May 5th, 2025</div>
+            </div>
+            <div class="time"> 2:45:10 <small> pm </small>
+            </div>
         </div>
-        <h2>Bristol 🏴󠁧󠁢󠁥󠁮󠁧󠁿</h2>
-        <div class="date"> May 5th, 2025</div>
-        <div class="time"> 2:45:10 pm</div>
+        <div class="city">
+            <div>
+                <h2>Bristol 🏴󠁧󠁢󠁥󠁮󠁧󠁿</h2>
+                <div class="date"> May 5th, 2025</div>
+            </div>
+            <div class="time"> 2:45:10 <small>pm</small>
+            </div>
+        </div>
     </div>
 
+    </div>
 
     <footer>
-        This project was coded by<a href="https://github.com/whitl33/world-clock-project" target="_blank">Whitney
-            Lee</a> is opened sourced on <a href="https://github.com/whitl33" target="_blank">Github </a> and hosted
+        This project was coded by <a href="https://github.com/whitl33/world-clock-project" target="_blank">
+            <strong>Whitney Lee</strong>
+        </a> is opened sourced on <a href="https://github.com/whitl33" target="_blank">Github </a> and hosted
         on
         <a href="https://world-clock-project-ok.netlify.app" target="_blank"> Netlify</a>
     </footer>
