--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.30.1/moment.min.js"></script>
+    <script
+        src="https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.47/moment-timezone-with-data-1970-2030.min.js"></script>
     <title>World Clock</title>
 </head>
 
@@ -18,20 +21,21 @@
             <option value=""> Portland</option>
         </select>
 
-        <div class="city">
+
+        <div id="sydney" class="city">
             <div>
                 <h2> Sydney 🇦🇺 </h2>
-                <div class="date"> May 5th, 2025</div>
+                <div class="date"> </div>
             </div>
-            <div class="time"> 2:45:10 <small> pm </small>
+            <div class="time">
             </div>
         </div>
-        <div class="city">
+        <div id="bristol" class="city">
             <div>
                 <h2>Bristol 🏴󠁧󠁢󠁥󠁮󠁧󠁿</h2>
-                <div class="date"> May 5th, 2025</div>
+                <div class="date"> </div>
             </div>
-            <div class="time"> 2:45:10 <small>pm</small>
+            <div class="time">
             </div>
         </div>
     </div>
