Added the functionality for the select.

--- a/index.html
+++ b/index.html
@@ -14,32 +14,32 @@
 <body>
     <h1> WORLD CLOCK</h1>
     <div class="container">
-        <select>
+        <select id="city">
             <option value=""> Select a City...</option>
-            <option value=""> Montreal</option>
-            <option value=""> New Delhi</option>
-            <option value=""> Portland</option>
+            <option value="America/Montreal"> Montreal</option>
+            <option value="Europe/Zurich">Zurich</option>
+            <option value="America/Sitka">Sitka</option>
         </select>
 
-
-        <div id="sydney" class="city">
-            <div>
-                <h2> Sydney 🇦🇺 </h2>
-                <div class="date"> </div>
+        <div id="cities">
+            <div id="sydney" class="city">
+                <div>
+                    <h2> Sydney 🇦🇺 </h2>
+                    <div class="date"> </div>
+                </div>
+                <div class="time">
+                </div>
             </div>
-            <div class="time">
-            </div>
-        </div>
-        <div id="bristol" class="city">
-            <div>
-                <h2>Bristol 🏴󠁧󠁢󠁥󠁮󠁧󠁿</h2>
-                <div class="date"> </div>
-            </div>
-            <div class="time">
+            <div id="bristol" class="city">
+                <div>
+                    <h2>Bristol 🏴󠁧󠁢󠁥󠁮󠁧󠁿</h2>
+                    <div class="date"> </div>
+                </div>
+                <div class="time">
+                </div>
             </div>
         </div>
     </div>
-
     </div>
 
     <footer>
