added the current location

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="container">
         <select id="city">
             <option value=""> Select a City...</option>
-            <option value="America/Montreal"> Montreal</option>
+            <option value="current"> My Current Location</option>
             <option value="Europe/Zurich">Zurich</option>
             <option value="America/Sitka">Sitka</option>
         </select>
