updated select, changed css color, changed js and added link.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
             <option value=""> Select a City...</option>
             <option value="current"> My Current Location</option>
             <option value="Europe/Zurich">Zurich</option>
-            <option value="America/Sitka">Sitka</option>
+            <option value="America/Vancouver">Vancouver</option>
+            <option value="Asia/Bangkok">Bangkok</option>
         </select>
 
         <div id="cities">
@@ -30,9 +31,19 @@
                 <div class="time">
                 </div>
             </div>
+
             <div id="bristol" class="city">
                 <div>
                     <h2>Bristol 🏴󠁧󠁢󠁥󠁮󠁧󠁿</h2>
+                    <div class="date"> </div>
+                </div>
+                <div class="time">
+                </div>
+            </div>
+
+            <div id="montreal" class="city">
+                <div>
+                    <h2> Montreal 🇨🇦 </h2>
                     <div class="date"> </div>
                 </div>
                 <div class="time">
